--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
        8""88888P'  `Y8bod8P' d888b    o888o  888bod8P'   "888" 8""888P'
                                              888
                                             o888o
-     ###################################################################### -->    
+     ###################################################################### -->
     <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+    <!-- <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script> -->
     <script src="./js/index.js"></script>
     <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
     <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
