--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <script async src="./js/index.js"></script>
   <script async src="./js/main.js"></script>
 
-  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <!-- <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
 
-  <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
+  <!-- <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script> -->
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
 
   <script src="js/owl-carousel/owl.carousel.min.js"></script>
@@ -423,8 +423,8 @@
       <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
     </menu>
   </footer>
-  <script src="https://unpkg.com/react@0.0.0-375616788/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@0.0.0-375616788/umd/react-dom.production.min.js"></script>
+  <!-- <script src="https://unpkg.com/react@0.0.0-375616788/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@0.0.0-375616788/umd/react-dom.production.min.js"></script> -->
 </body>
 
 </html>
