--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
   <link rel="shortcut icon" href="favicon.png">
 
-  <script async src="./js/index.js"></script>
-  <script async src="./js/main.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="./js/main.js"></script>
 
   <!-- <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
