--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
   <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
   <link rel="shortcut icon" href="favicon.png">
 
-  <script src="./js/index.js"></script>
-  <script src="./js/main.js"></script>
+
 
   <!-- <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
 
   <!-- <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script> -->
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/main.js"></script>
 
   <script src="js/owl-carousel/owl.carousel.min.js"></script>
-  <script src="./js/banner.js"></script>
+  <script src="js/banner.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
   <style>
@@ -170,7 +171,7 @@
       <a class="header-menu__link">Сценарии</a>
     </menu>
 
-    <img src="img/switcher.svg">
+    <img class="header-menu__switcher" src="img/switcher.svg">
   </header>
 
   <div class="wrap">
