--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
   <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
   <link rel="shortcut icon" href="favicon.png">
 
-  <!-- <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
-
-  <!-- <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script> -->
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> -->
   <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
-  
+
   <script src="js/owl-carousel/owl.carousel.min.js"></script>
   <script src="js/banner.js"></script>
   <script src="js/index.js"></script>
@@ -394,8 +390,6 @@
       <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
     </menu>
   </footer>
-  <!-- <script src="https://unpkg.com/react@0.0.0-375616788/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@0.0.0-375616788/umd/react-dom.production.min.js"></script> -->
 </body>
 
 </html>
