--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="favicon.png">
 
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-  <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+  <!-- <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script> -->
 
   <script src="js/owl-carousel/owl.carousel.min.js"></script>
   <script src="js/banner.js"></script>
