Удален banner.js

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
   <link rel="shortcut icon" href="favicon.png">
 
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-  <!-- <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script> -->
 
   <script src="js/owl-carousel/owl.carousel.min.js"></script>
-  <script src="js/banner.js"></script>
   <script src="js/index.js"></script>
   <script src="js/main.js"></script>
   <style>
@@ -24,6 +22,7 @@
 </head>
 
 <body>
+  <a target=_blank href="http://ya.ru"> </a>
   <div class="video-controls">
     <div class="video-controls-wrap">
       <p class="controls-text">Яркость</p>
@@ -39,34 +38,12 @@
     <img class="header-logo" src="img/yd2.png">
     <menu class="header-menu">
       <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
-      <a class="header-menu__link header-menu__link_active " href="index.html">События</a>
+      <a class="header-menu__link header-menu__link_active" href="index.html">События</a>
       <a class="header-menu__link">Сводка</a>
       <a class="header-menu__link">Устройства</a>
       <a class="header-menu__link">Сценарии</a>
     </menu>
-
-    <!-- <img class="header-menu__switcher" src="img/switcher.svg"> -->
-    <svg class="header-menu__switcher" width="16px" height="14px" viewBox="0 0 16 14" version="1.1"
-      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <!-- Generator: Sketch 51 (57462) - http://www.bohemiancoding.com/sketch -->
-      <title>icon_list_m</title>
-      <desc>Created with Sketch.</desc>
-      <defs>
-        <path
-          d="M0,3.32630157 C0,2.77790036 0.444630861,2.33333333 1.00087166,2.33333333 L14.9991283,2.33333333 C15.5518945,2.33333333 16,2.7736791 16,3.32630157 L16,4.00703176 C16,4.55543298 15.5553691,5 14.9991283,5 L1.00087166,5 C0.448105505,5 0,4.55965424 0,4.00703176 L0,3.32630157 Z M0,8.65963491 C0,8.11123369 0.444630861,7.66666667 1.00087166,7.66666667 L14.9991283,7.66666667 C15.5518945,7.66666667 16,8.10701243 16,8.65963491 L16,9.34036509 C16,9.88876631 15.5553691,10.3333333 14.9991283,10.3333333 L1.00087166,10.3333333 C0.448105505,10.3333333 0,9.89298757 0,9.34036509 L0,8.65963491 Z M0,13.9929682 C0,13.444567 0.444630861,13 1.00087166,13 L14.9991283,13 C15.5518945,13 16,13.4403458 16,13.9929682 L16,14.6736984 C16,15.2220996 15.5553691,15.6666667 14.9991283,15.6666667 L1.00087166,15.6666667 C0.448105505,15.6666667 0,15.2263209 0,14.6736984 L0,13.9929682 Z"
-          id="path-1"></path>
-      </defs>
-      <g id="Final" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="v1-1-1-mobile-home" transform="translate(-339.000000, -70.000000)">
-          <g id="Direct-/-Icons-/-List-/-M" transform="translate(339.000000, 68.000000)">
-            <mask id="mask-2" fill="white">
-              <use xlink:href="#path-1"></use>
-            </mask>
-            <use id="icon_list_m" fill="#333333" xlink:href="#path-1"></use>
-          </g>
-        </g>
-      </g>
-    </svg>
+    <img class="header-menu__switcher" src="./img/switcher.svg" />
   </header>
 
   <div class="wrap">
@@ -213,13 +190,8 @@
               <input type="range" class="volume-range" name="volume-range" min="0" max="100" value="50" step="1">
               <div class="song-volume">80%</div>
             </div>
-
-
-
           </div>
         </div>
-
-
         <div class="card card_size_m">
           <div class="card-heading">
             <div class="card-icon-wrap">
@@ -238,15 +210,11 @@
             <button class="button  button_yellow">
               Дa
             </button>
-
             <button class="button">
               Heт
             </button>
           </div>
-
         </div>
-
-
         <div class="card card_size_s">
           <div class="card-heading">
             <div class="card-icon-wrap">
@@ -261,8 +229,6 @@
           <p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в
             строю!</p>
         </div>
-
-
         <div class="card card_size_l critical">
           <div class="card-heading heading-critical">
             <div class="card-icon-wrap">
@@ -282,9 +248,7 @@
             местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
             <div class="critical-cam" onload="initCriticalCam()" touch-action="none"
               style="background-position: 0px 0px; background-size: 100%; filter: brightness(100%);">
-
             </div>
-
           </p>
         </div>
 
