Возвращена ссылка на стили карусели

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/main.css">
-  <!-- <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" /> -->
+  <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
   <link rel="shortcut icon" href="favicon.png">
 
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
