--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.webp">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
   </div>
 
   <header>
-    <img class="header-logo" src="img/yd2.png">
+    <img class="header-logo" src="img/yd2.webp">
     <menu class="header-menu">
       <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
       <a class="header-menu__link header-menu__link_active" href="index.html">События</a>
@@ -41,8 +41,6 @@
     <div class="switch-block switch-block_active" data="feed">
       <h2 class="content-heading">Лента событий</h2>
       <div class="content-block content">
-
-
         <div class="card card_size_l">
           <div class="card-heading">
             <div class="card-icon-wrap">
@@ -57,7 +55,7 @@
           <p class="card-description card-description_big">Так держать! За последнюю неделю вы потратили на 10% меньше
             ресурсов, чем неделей ранее.</p>
           <div class="card-data card-data_graph">
-            <img class="card-data_graph-img" src="./img/waves.png">
+            <img class="card-data_graph-img" src="img/waves.webp">
           </div>
         </div>
         <div class="card card_size_s">
@@ -158,7 +156,7 @@
             <div class="song-area">
               <div class="cover-wrap">
                 <img class="cover"
-                  src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m100x100">
+                  src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m50x50">
               </div>
 
               <div class="song-data">
@@ -274,7 +272,6 @@
     </menu>
   </footer>
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-  <!-- <script src="js/owl-carousel/owl.carousel.min.js"></script> -->
   <script src="js/index.js"></script>
   <script src="js/main.js"></script>
 </body>
