Исправлена недостающая картинка

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <div class="switch-block switch-block_active" data="feed">
       <h2 class="content-heading">Лента событий</h2>
       <div class="content-block content">
+
+
         <div class="card card_size_l">
           <div class="card-heading">
             <div class="card-icon-wrap">
@@ -55,7 +57,7 @@
           <p class="card-description card-description_big">Так держать! За последнюю неделю вы потратили на 10% меньше
             ресурсов, чем неделей ранее.</p>
           <div class="card-data card-data_graph">
-            <img class="card-data_graph-img" src="img/waves.png">
+            <img class="card-data_graph-img" src="./img/waves.png">
           </div>
         </div>
         <div class="card card_size_s">
@@ -272,6 +274,7 @@
     </menu>
   </footer>
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+  <!-- <script src="js/owl-carousel/owl.carousel.min.js"></script> -->
   <script src="js/index.js"></script>
   <script src="js/main.js"></script>
 </body>
