--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css" />
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.webp">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
   </div>
 
   <header>
-    <img class="header-logo" src="img/yd2.png">
+    <img class="header-logo" src="img/yd2.webp">
     <menu class="header-menu">
       <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
       <a class="header-menu__link header-menu__link_active" href="index.html">События</a>
@@ -57,7 +57,7 @@
           <p class="card-description card-description_big">Так держать! За последнюю неделю вы потратили на 10% меньше
             ресурсов, чем неделей ранее.</p>
           <div class="card-data card-data_graph">
-            <img class="card-data_graph-img" src="./img/waves.png">
+            <img class="card-data_graph-img" src="./img/waves.webp">
           </div>
         </div>
         <div class="card card_size_s">
