--- a/index.html
+++ b/index.html
@@ -273,8 +273,10 @@
       <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
     </menu>
   </footer>
-</body>
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+  <!-- <script src="js/owl-carousel/owl.carousel.min.js"></script> -->
   <script src="js/index.js"></script>
   <script src="js/main.js"></script>
+</body>
+
 </html>
