--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
           </div>
         </div>
 
-
         <div class="card card_size_m">
           <div class="card-heading">
             <div class="card-icon-wrap">
@@ -274,7 +273,7 @@
     </menu>
   </footer>
 </body>
-  <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/main.js"></script>
+  <script defer src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+  <script defer src="js/index.js"></script>
+  <script defer src="js/main.js"></script>
 </html>
