Порядок загрузки скриптов

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     </menu>
   </footer>
 </body>
-  <script defer src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-  <script defer src="js/index.js"></script>
-  <script defer src="js/main.js"></script>
+  <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/main.js"></script>
 </html>
