--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
           </div>
           <p class="card-description card-description_big description_critical">Робопылесос не смог сменить свое
             местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
-            <div class="critical-cam" onload="initCriticalCam()" touch-action="none"
-              style="background-position: 0px 0px; background-size: 100%; filter: brightness(100%);">
+            <div class="critical-cam" touch-action="none">
             </div>
           </p>
         </div>
@@ -271,8 +270,8 @@
       <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
     </menu>
   </footer>
-</body>
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
   <script src="js/index.js"></script>
   <script src="js/main.js"></script>
+</body>
 </html>
