Удалены лишние стили

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="robots" content="noindex">
 
-  <link rel="stylesheet" href="./css/default.css">
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="shortcut icon" href="favicon.webp">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
