Поправлены пути у картинок

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     }
 
     .card {
-    background: url('../img/cbg.webp');
+    background: url('./img/cbg.webp');
     color: #333;
     border-radius: 20px;
     box-sizing: border-box;
@@ -543,7 +543,7 @@
     }
 
     .description_critical {
-    background: url('../img/cbg.webp');
+    background: url('./img/cbg.webp');
     color: #000;
     border-radius: 20px;
     margin-top: -20px;
@@ -570,7 +570,7 @@
     width: 100%;
     margin-top: 40px;
     display: block;
-    background: url(../img/cam2.webp);
+    background: url('./img/cam2.webp');
     border-radius: 20px;
     background-size: cover;
     background-position: 0 0;
@@ -990,7 +990,7 @@
   </div>
 
   <header>
-    <img class="header-logo" src="img/yd2.webp">
+    <img class="header-logo" src="./img/yd2.webp">
     <menu class="header-menu">
       <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
       <a class="header-menu__link header-menu__link_active" href="index.html">События</a>
@@ -1011,7 +1011,7 @@
         <div class="card card_size_l">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/stats.svg">
+              <img class="card-icon" src="./img/stats.svg">
             </div>
             <h3 class="card-title">Еженедельный отчет по расходам ресурсов</h3>
           </div>
@@ -1028,7 +1028,7 @@
         <div class="card card_size_s">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/key.svg">
+              <img class="card-icon" src="./img/key.svg">
             </div>
             <h3 class="card-title">Дверь открыта</h3>
           </div>
@@ -1042,7 +1042,7 @@
         <div class="card card_size_s">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/robot-cleaner.svg">
+              <img class="card-icon" src="./img/robot-cleaner.svg">
             </div>
             <h3 class="card-title">Уборка закончена</h3>
           </div>
@@ -1056,7 +1056,7 @@
         <div class="card card_size_s">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/router.svg">
+              <img class="card-icon" src="./img/router.svg">
             </div>
             <h3 class="card-title">Новый пользователь</h3>
           </div>
@@ -1069,7 +1069,7 @@
         <div class="card card_size_m">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/thermal.svg">
+              <img class="card-icon" src="./img/thermal.svg">
             </div>
             <h3 class="card-title">Изменен климатический режим</h3>
           </div>
@@ -1092,7 +1092,7 @@
         <div class="card card_size_m critical">
           <div class="card-heading heading-critical">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/ac.svg">
+              <img class="card-icon" src="./img/ac.svg">
             </div>
             <h3 class="card-title">Невозможно включить кондиционер</h3>
           </div>
@@ -1108,7 +1108,7 @@
         <div class="card card_size_m">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/music.svg">
+              <img class="card-icon" src="./img/music.svg">
             </div>
             <h3 class="card-title">Музыка включена</h3>
           </div>
@@ -1135,10 +1135,10 @@
             </div>
             <div class="player-controls">
               <button class="player-control player-control_prev">
-                <img src="img/Prev.svg">
+                <img src="./img/Prev.svg">
               </button>
               <button class="player-control player-control_next">
-                <img src="img/Prev.svg">
+                <img src="./img/Prev.svg">
               </button>
 
               <input type="range" class="volume-range" name="volume-range" min="0" max="100" value="50" step="1">
@@ -1149,7 +1149,7 @@
         <div class="card card_size_m">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/fridge.svg">
+              <img class="card-icon" src="./img/fridge.svg">
             </div>
             <h3 class="card-title">Заканчивается молоко</h3>
           </div>
@@ -1172,7 +1172,7 @@
         <div class="card card_size_s">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/battery.svg">
+              <img class="card-icon" src="./img/battery.svg">
             </div>
             <h3 class="card-title">Зарядка завершена</h3>
           </div>
@@ -1188,7 +1188,7 @@
             <div class="card-icon-wrap">
               <div id="carousel">
                 <div class="carousel-element">
-                  <img class="card-icon" src="img/cam.svg">
+                  <img class="card-icon" src="./img/cam.svg">
                 </div>
               </div>
             </div>
@@ -1209,7 +1209,7 @@
         <div class="card card_size_s" style="border-radius: 22px;">
           <div class="card-heading">
             <div class="card-icon-wrap">
-              <img class="card-icon" src="img/battery.svg">
+              <img class="card-icon" src="./img/battery.svg">
             </div>
             <h3 class="card-title">Зарядка завершена</h3>
           </div>
