Исправлена ошибка с пылесосом

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </menu>
   </footer>
   <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
-  <script src="js/index.js"></script>
+  <!-- <script src="js/index.js"></script> -->
   <script src="js/main.js"></script>
 </body>
 
