--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
           </div>
           <p class="card-description card-description_big description_critical">Робопылесос не смог сменить свое
             местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
-            <div class="critical-cam" touch-action="none">
+
+            <div class="critical-cam" onload="initCriticalCam()" touch-action="none"
+              style="background-position: 0px 0px; background-size: 100%;">
+
             </div>
           </p>
         </div>
