--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="noindex">
     <!-- <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css"> -->
-    <link rel="shortcut icon" href="favicon.png">
+    <!-- <link rel="shortcut icon" href="favicon.png"> -->
     <!-- ######################################################################
         .oooooo..o                     o8o                 .
        d8P'    `Y8                     `"'               .o8
@@ -1386,7 +1386,7 @@
      o8o        o888o `Y8bod8P' o888o o888o  `V88V"V8P'
   ###################################################################### -->
 <header>
-    <img class="header-logo" src="img/yd2.png">
+    <img class="header-logo" src="img/yd2.webp">
     <menu class="header-menu">
         <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
         <a class="header-menu__link header-menu__link_active " href="index.html">События</a>
