--- a/index.html
+++ b/index.html
@@ -848,6 +848,11 @@
       opacity: 1
     }
 
+    .header-menu_active {
+        width: 250px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
+    }
+
     footer {
       height: 50px;
       flex-grow: 0;
@@ -1233,6 +1238,41 @@
         cursor: pointer;
         display: block
       }
+
+      .header-logo {
+        margin: 21px 52px 0 0
+    }
+
+    .header-menu {
+        display: block;
+        position: absolute;
+        background: #fff;
+        top: -45px;
+        padding-top: 14px;
+        left: 0;
+        padding-left: 20px;
+        z-index: 2;
+        width: 0;
+        overflow: hidden;
+        transition: all .5s ease
+    }
+
+    .header-menu_active {
+        width: 250px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
+    }
+
+    .header-menu__link {
+        padding: 20px 20px 20px 0;
+        width: 100%
+    }
+
+    .header-menu__switcher {
+        float: right;
+        margin-top: 27px;
+        cursor: pointer;
+        display: block
+    }
 
       .card {
         overflow: hidden;
