--- a/index.html
+++ b/index.html
@@ -13,94 +13,6 @@
 
 <body>
   <style>
-    a,
-    abbr,
-    acronym,
-    address,
-    applet,
-    article,
-    aside,
-    audio,
-    b,
-    big,
-    blockquote,
-    body,
-    canvas,
-    caption,
-    center,
-    cite,
-    code,
-    dd,
-    del,
-    details,
-    dfn,
-    div,
-    dl,
-    dt,
-    em,
-    embed,
-    fieldset,
-    figcaption,
-    figure,
-    footer,
-    form,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    hgroup,
-    html,
-    i,
-    iframe,
-    img,
-    ins,
-    kbd,
-    label,
-    legend,
-    li,
-    mark,
-    menu,
-    nav,
-    object,
-    ol,
-    output,
-    p,
-    pre,
-    q,
-    ruby,
-    s,
-    samp,
-    section,
-    small,
-    span,
-    strike,
-    strong,
-    sub,
-    summary,
-    sup,
-    table,
-    tbody,
-    td,
-    tfoot,
-    th,
-    thead,
-    time,
-    tr,
-    tt,
-    u,
-    ul,
-    var,
-    video {
-      margin: 0;
-      padding: 0;
-      border: 0;
-      font-size: 100%;
-      font: inherit;
-      vertical-align: baseline;
-    }
-
     :root {
       --blue: #007bff;
       --indigo: #6610f2;
@@ -173,6 +85,11 @@
       margin-bottom: 1rem;
     }
 
+    ol {
+      margin-top: 0;
+      margin-bottom: 1rem;
+    }
+
     a {
       color: #007bff;
       text-decoration: none;
@@ -204,6 +121,11 @@
       border-style: none;
     }
 
+    svg {
+      overflow: hidden;
+      vertical-align: middle;
+    }
+
     button {
       border-radius: 0;
     }
@@ -229,7 +151,8 @@
       text-transform: none;
     }
 
-    button {
+    button,
+    [type="button"] {
       -webkit-appearance: button;
     }
 
@@ -240,7 +163,8 @@
       cursor: pointer;
     }
 
-    button::-moz-focus-inner {
+    button::-moz-focus-inner,
+    [type="button"]::-moz-focus-inner {
       padding: 0;
       border-style: none;
     }
@@ -248,6 +172,10 @@
     ::-webkit-file-upload-button {
       font: inherit;
       -webkit-appearance: button;
+    }
+
+    template {
+      display: none;
     }
 
     h2,
@@ -270,37 +198,9 @@
       font-size: 1.5rem;
     }
 
-    ol,
-    ul {
-      list-style: none;
-    }
-
     .purchase-list__item+.purchase-list__item {
       margin-top: 10px;
     }
-
-    .purchase-list {
-      padding: 0 40px;
-    }
-
-    .purchase-list-wrap .card-description {
-      padding-bottom: 12px;
-    }
-
-    .purchase-list__item {
-      font-size: 20px;
-      position: relative;
-    }
-
-    .purchase-list__item::before {
-      content: '';
-      position: absolute;
-      left: -24px;
-      width: 20px;
-      height: 20px;
-      background: url("./img/checked.svg");
-    }
-
 
     .was-validated .custom-control-input:valid:focus:not(:checked)~.custom-control-label::before,
     .custom-control-input.is-valid:focus:not(:checked)~.custom-control-label::before {
@@ -541,6 +441,28 @@
       opacity: .75;
     }
 
+    .purchase-list {
+      padding: 0 40px;
+    }
+
+    .purchase-list-wrap .card-description {
+      padding-bottom: 12px;
+    }
+
+    .purchase-list__item {
+      font-size: 20px;
+      position: relative;
+    }
+
+    .purchase-list__item::before {
+      content: '';
+      position: absolute;
+      left: -24px;
+      width: 20px;
+      height: 20px;
+      background: url("./img/checked.svg");
+    }
+
     @supports (position: sticky) {}
 
     @media print {
@@ -591,8 +513,11 @@
     h4,
     html,
     img,
+    li,
     menu,
-    p {
+    ol,
+    p,
+    span {
       margin: 0;
       padding: 0;
       border: 0;
@@ -609,6 +534,10 @@
 
     body {
       line-height: 1
+    }
+
+    ol {
+      list-style: none
     }
 
     input[type=range] {
@@ -846,11 +775,6 @@
 
     .header-menu__link_active {
       opacity: 1
-    }
-
-    .header-menu_active {
-        width: 250px;
-        box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
     }
 
     footer {
@@ -1227,6 +1151,11 @@
         transition: all .5s ease
       }
 
+      .header-menu_active {
+        width: 250px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
+      }
+
       .header-menu__link {
         padding: 20px 20px 20px 0;
         width: 100%
@@ -1238,41 +1167,6 @@
         cursor: pointer;
         display: block
       }
-
-      .header-logo {
-        margin: 21px 52px 0 0
-    }
-
-    .header-menu {
-        display: block;
-        position: absolute;
-        background: #fff;
-        top: -45px;
-        padding-top: 14px;
-        left: 0;
-        padding-left: 20px;
-        z-index: 2;
-        width: 0;
-        overflow: hidden;
-        transition: all .5s ease
-    }
-
-    .header-menu_active {
-        width: 250px;
-        box-shadow: 0 0 10px 0 rgba(0, 0, 0, .3)
-    }
-
-    .header-menu__link {
-        padding: 20px 20px 20px 0;
-        width: 100%
-    }
-
-    .header-menu__switcher {
-        float: right;
-        margin-top: 27px;
-        cursor: pointer;
-        display: block
-    }
 
       .card {
         overflow: hidden;
