--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
       font-size: 1.5rem;
     }
 
+    .carousel-element {
+      overflow: hidden;
+    }
+
     .purchase-list__item+.purchase-list__item {
       margin-top: 10px;
     }
