--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="robots" content="noindex">
+
 </head>
 
 <body>
@@ -1330,6 +1331,7 @@
       }
     }
   </style>
+  <a target=_blank href="http://ya.ru"> </a>
   <div class="video-controls">
     <div class="video-controls-wrap">
       <p class="controls-text">Яркость</p>
@@ -1513,10 +1515,10 @@
             молоко. Вы хотите добавить его в список покупок?</p>
 
           <div class="buttons-wrap">
-            <button class="button  button_yellow">
+            <button class="button  button_yellow" type="button">
               Дa
             </button>
-            <button class="button">
+            <button class="button" type="button">
               Heт
             </button>
           </div>
@@ -1592,6 +1594,7 @@
 
 </body>
 <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+<!-- <script src="js/index.js"></script> -->
 <script src="js/main.js"></script>
 
 </html>
