--- a/index.html
+++ b/index.html
@@ -421,7 +421,11 @@
       word-wrap: break-word;
       background-color: #fff;
       background-clip: border-box;
-      border-radius: 0.25rem;
+      border-radius: 22px;
+    }
+
+    .card:has("card_size_s") {
+      border-radius: 23px;
     }
 
     .card-title {
@@ -804,7 +808,8 @@
 
     .card_size_s {
       grid-column: span 2;
-      grid-row: span 1
+      grid-row: span 1;
+      border-radius: 23px;
     }
 
     .card_size_m {
@@ -820,7 +825,7 @@
     .card {
       background: url("./img/cbg.webp");
       color: #333;
-      border-radius: 20px;
+      /* border-radius: 20px; */
       box-sizing: border-box;
       padding: 0 20px 20px 20px
     }
@@ -1170,7 +1175,8 @@
 
       .card {
         overflow: hidden;
-        padding: 0 17px 20px 17px
+        padding: 0 17px 20px 17px;
+        border-radius: 22px;
       }
 
       .card_size_l {
