--- a/index.html
+++ b/index.html
@@ -1597,7 +1597,7 @@
     </menu>
   </footer>
 
-  <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script>
+  <!-- <script src="https://yastatic.net/jquery/3.3.1/jquery.js"></script> -->
   <script src="js/main.js"></script>
 </body>
 
