--- a/index_src.html
+++ b/index_src.html
@@ -1,4 +1,15 @@
-<meta charset="utf-8"><meta name="viewport"content="width=device-width"><meta name="robots"content="noindex"><body><style>*,
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="noindex">
+
+</head>
+
+<body>
+  <style>
+    *,
     *::before,
     *::after {
       box-sizing: border-box;
@@ -1292,4 +1303,269 @@
         margin-bottom: 10px;
         margin-top: 10px
       }
-    }</style><a target="_blank"href="http://ya.ru"></a><div class="video-controls"><div class="video-controls-wrap"><p class="controls-text">Яркость</p><input type="range"class="volume-range video-control video-control_brightness"name="video-brightness-range"min="0"max="200"value="100"step="1"><p class="controls-text">Контрастность</p><input type="range"class="volume-range video-control video-control_contrast"name="video-contrast-range"min="0"max="200"value="100"step="1"></div></div><header><img class="header-logo"src="img/yd2.webp"><menu class="header-menu"><a class="header-menu__link"href="cam.html">Видеонаблюдение</a> <a class="header-menu__link header-menu__link_active"href="index.html">События</a> <a class="header-menu__link">Сводка</a> <a class="header-menu__link">Устройства</a> <a class="header-menu__link">Сценарии</a></menu><img class="header-menu__switcher"src="./img/switcher.svg"></header><div class="wrap"><div class="switch-block switch-block_active"data="feed"><h2 class="content-heading">Лента событий</h2><div class="content-block content"><div class="card card_size_l"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/stats.svg"></div><h3 class="card-title">Еженедельный отчет по расходам ресурсов</h3></div><div class="card-specs"><p class="card-source">Сенсоры потребления<p class="card-time">19:00, Сегодня</div><p class="card-description card-description_big">Так держать! За последнюю неделю вы потратили на 10% меньше ресурсов, чем неделей ранее.<div class="card-data card-data_graph"><img class="card-data_graph-img"src="./img/waves.webp"></div></div><div class="card card_size_s"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/key.svg"></div><h3 class="card-title">Дверь открыта</h3></div><div class="card-specs"><p class="card-source">Сенсор входной двери<p class="card-time card-time_block">18:50, Сегодня</div></div><div class="card card_size_s"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/robot-cleaner.svg"></div><h3 class="card-title">Уборка закончена</h3></div><div class="card-specs"><p class="card-source">Пылесос<p class="card-time card-time_block">18:45, Сегодня</div></div><div class="card card_size_s"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/router.svg"></div><h3 class="card-title">Новый пользователь</h3></div><div class="card-specs"><p class="card-source">Роутер<p class="card-time card-time_block">18:45, Сегодня</div></div><div class="card card_size_m"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/thermal.svg"></div><h3 class="card-title">Изменен климатический режим</h3></div><div class="card-specs"><p class="card-source">Сенсор микроклимата<p class="card-time">18:30, Сегодня</div><p class="card-description card-description_big">Установлен климатический режим «Фиджи»<div class="card-data card-data_climat"><div class="climat-block">Температура: <em class="climat-block_data climat-block_data__temp">24 C</em></div><div class="climat-block hum-block">Влажность: <em class="climat-block_data climat-block_data__hum">80%</em></div></div></div><div class="card card_size_m critical"><div class="card-heading heading-critical"><div class="card-icon-wrap"><img class="card-icon"src="img/ac.svg"></div><h3 class="card-title">Невозможно включить кондиционер</h3></div><div class="card-specs specs-critical"><p class="card-source">Кондиционер<p class="card-time">18:21, Сегодня</div><p class="card-description card-description_big description_critical">В комнате открыто окно, закройте его и повторите попытку</div><div class="card card_size_m"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/music.svg"></div><h3 class="card-title">Музыка включена</h3></div><div class="card-specs"><p class="card-source">Яндекс.Станция<p class="card-time">18:16, Сегодня</div><p class="card-description card-description_big description_critical">Сейчас проигрывается:<div class="card-data card-data_music"><div class="song-area"><div class="cover-wrap"><img class="cover"src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m50x50"></div><div class="song-data"><h4 class="song-title">Florence &amp; The Machine - Big God</h4><div class="song-timeline-wrap"><input type="range"class="song-range"name="song-range"min="0"max="100"value=""step="1"><div class="song-length">4:31</div></div></div></div><div class="player-controls"><button class="player-control player-control_prev"><img src="img/Prev.svg"></button> <button class="player-control player-control_next"><img src="img/Prev.svg"></button> <input type="range"class="volume-range"name="volume-range"min="0"max="100"value="50"step="1"><div class="song-volume">80%</div></div></div></div><div class="card card_size_m"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/fridge.svg"></div><h3 class="card-title">Заканчивается молоко</h3></div><div class="card-specs"><p class="card-source">Холодильник<p class="card-time">17:23, Сегодня</div><p class="card-description card-description_big description_critical">Кажется, в холодильнике заканчивается молоко. Вы хотите добавить его в список покупок?<div class="buttons-wrap"><button class="button button_yellow"type="button">Дa</button> <button class="button"type="button">Heт</button></div></div><div class="card card_size_s"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/battery.svg"></div><h3 class="card-title">Зарядка завершена</h3></div><div class="card-specs"><p class="card-source">Оконный сенсор<p class="card-time card-time_block">16:22, Сегодня</div><p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в строю!</div><div class="card card_size_l critical"><div class="card-heading heading-critical"><div class="card-icon-wrap"><div id="carousel"><div class="carousel-element"><img class="card-icon"src="img/cam.svg"></div></div></div><h3 class="card-title">Пылесос застрял</h3></div><div class="card-specs specs-critical"><p class="card-source">Сенсор движения<p class="card-time">16:17, Сегодня</div><p class="card-description card-description_big description_critical">Робопылесос не смог сменить свое местоположение в течение последних 3 минут. Похоже, ему нужна помощь.<div class="critical-cam"onload="initCriticalCam()"touch-action="none"style="background-position: 0px 0px; background-size: 100%; filter: brightness(100%);"></div><p></div><div class="card card_size_s"style="border-radius: 22px;"><div class="card-heading"><div class="card-icon-wrap"><img class="card-icon"src="img/battery.svg"></div><h3 class="card-title">Зарядка завершена</h3></div><div class="card-specs"><p class="card-source">Оконный сенсор<p class="card-time card-time_block">16:22, Сегодня</div><p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в строю!</div></div></div><div class="content-block multimedia"></div></div><footer><menu class="footer-menu"><a class="footer-menu__link">Помощь</a> <a class="footer-menu__link">Обратная связь</a> <a class="footer-menu__link">Разработчикам</a> <a class="footer-menu__link">Условия использования</a> <a class="footer-menu__link"href="./assets/license.pdf"target="blank">Лицензия</a></menu></footer><script src="js/main.js"></script>
+    }
+  </style>
+  <a target=_blank href="http://ya.ru"> </a>
+  <div class="video-controls">
+    <div class="video-controls-wrap">
+      <p class="controls-text">Яркость</p>
+      <input type="range" class="volume-range video-control video-control_brightness" name="video-brightness-range"
+        min="0" max="200" value="100" step="1">
+      <p class="controls-text">Контрастность</p>
+      <input type="range" class="volume-range video-control video-control_contrast" name="video-contrast-range" min="0"
+        max="200" value="100" step="1">
+    </div>
+  </div>
+
+  <header>
+    <img class="header-logo" src="img/yd2.webp">
+    <menu class="header-menu">
+      <a class="header-menu__link" href="cam.html">Видеонаблюдение</a>
+      <a class="header-menu__link header-menu__link_active" href="index.html">События</a>
+      <a class="header-menu__link">Сводка</a>
+      <a class="header-menu__link">Устройства</a>
+      <a class="header-menu__link">Сценарии</a>
+    </menu>
+    <img class="header-menu__switcher" src="./img/switcher.svg" />
+  </header>
+
+  <div class="wrap">
+
+    <div class="switch-block switch-block_active" data="feed">
+      <h2 class="content-heading">Лента событий</h2>
+      <div class="content-block content">
+
+
+        <div class="card card_size_l">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/stats.svg">
+            </div>
+            <h3 class="card-title">Еженедельный отчет по расходам ресурсов</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Сенсоры потребления</p>
+            <p class="card-time">19:00, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big">Так держать! За последнюю неделю вы потратили на 10% меньше
+            ресурсов, чем неделей ранее.</p>
+          <div class="card-data card-data_graph">
+            <img class="card-data_graph-img" src="./img/waves.webp">
+          </div>
+        </div>
+        <div class="card card_size_s">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/key.svg">
+            </div>
+            <h3 class="card-title">Дверь открыта</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Сенсор входной двери</p>
+            <p class="card-time card-time_block">18:50, Сегодня</p>
+          </div>
+        </div>
+
+
+        <div class="card card_size_s">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/robot-cleaner.svg">
+            </div>
+            <h3 class="card-title">Уборка закончена</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Пылесос</p>
+            <p class="card-time card-time_block">18:45, Сегодня</p>
+          </div>
+        </div>
+
+
+        <div class="card card_size_s">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/router.svg">
+            </div>
+            <h3 class="card-title">Новый пользователь</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Роутер</p>
+            <p class="card-time card-time_block">18:45, Сегодня</p>
+          </div>
+        </div>
+
+        <div class="card card_size_m">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/thermal.svg">
+            </div>
+            <h3 class="card-title">Изменен климатический режим</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Сенсор микроклимата</p>
+            <p class="card-time">18:30, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big">Установлен климатический режим «Фиджи»</p>
+          <div class="card-data card-data_climat">
+            <div class="climat-block">
+              Температура: <em class="climat-block_data climat-block_data__temp">24 C</em>
+            </div>
+            <div class="climat-block hum-block">
+              Влажность: <em class="climat-block_data climat-block_data__hum">80%</em>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="card card_size_m critical">
+          <div class="card-heading heading-critical">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/ac.svg">
+            </div>
+            <h3 class="card-title">Невозможно включить кондиционер</h3>
+          </div>
+          <div class="card-specs specs-critical">
+            <p class="card-source">Кондиционер</p>
+            <p class="card-time">18:21, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big description_critical">В комнате открыто окно, закройте его и
+            повторите попытку</p>
+        </div>
+
+
+        <div class="card card_size_m">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/music.svg">
+            </div>
+            <h3 class="card-title">Музыка включена</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Яндекс.Станция</p>
+            <p class="card-time">18:16, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big description_critical">Сейчас проигрывается:</p>
+          <div class="card-data card-data_music">
+
+            <div class="song-area">
+              <div class="cover-wrap">
+                <img class="cover"
+                  src="https://avatars.yandex.net/get-music-content/193823/1820a43e.a.5517056-1/m50x50">
+              </div>
+
+              <div class="song-data">
+                <h4 class="song-title">Florence &amp; The Machine - Big God</h4>
+                <div class="song-timeline-wrap">
+                  <input type="range" class="song-range" name="song-range" min="0" max="100" value="" step="1">
+                  <div class="song-length">4:31</div>
+                </div>
+              </div>
+            </div>
+            <div class="player-controls">
+              <button class="player-control player-control_prev">
+                <img src="img/Prev.svg">
+              </button>
+              <button class="player-control player-control_next">
+                <img src="img/Prev.svg">
+              </button>
+
+              <input type="range" class="volume-range" name="volume-range" min="0" max="100" value="50" step="1">
+              <div class="song-volume">80%</div>
+            </div>
+          </div>
+        </div>
+        <div class="card card_size_m">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/fridge.svg">
+            </div>
+            <h3 class="card-title">Заканчивается молоко</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Холодильник</p>
+            <p class="card-time">17:23, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big description_critical">Кажется, в холодильнике заканчивается
+            молоко. Вы хотите добавить его в список покупок?</p>
+
+          <div class="buttons-wrap">
+            <button class="button  button_yellow" type="button">
+              Дa
+            </button>
+            <button class="button" type="button">
+              Heт
+            </button>
+          </div>
+        </div>
+        <div class="card card_size_s">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/battery.svg">
+            </div>
+            <h3 class="card-title">Зарядка завершена</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Оконный сенсор</p>
+            <p class="card-time card-time_block">16:22, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в
+            строю!</p>
+        </div>
+        <div class="card card_size_l critical">
+          <div class="card-heading heading-critical">
+            <div class="card-icon-wrap">
+              <div id="carousel">
+                <div class="carousel-element">
+                  <img class="card-icon" src="img/cam.svg">
+                </div>
+              </div>
+            </div>
+            <h3 class="card-title">Пылесос застрял</h3>
+          </div>
+          <div class="card-specs specs-critical">
+            <p class="card-source">Сенсор движения</p>
+            <p class="card-time">16:17, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big description_critical">Робопылесос не смог сменить свое
+            местоположение в течение последних 3 минут. Похоже, ему нужна помощь.
+            <div class="critical-cam" onload="initCriticalCam()" touch-action="none"
+              style="background-position: 0px 0px; background-size: 100%; filter: brightness(100%);">
+            </div>
+          </p>
+        </div>
+
+
+        <div class="card card_size_s" style="border-radius: 22px;">
+          <div class="card-heading">
+            <div class="card-icon-wrap">
+              <img class="card-icon" src="img/battery.svg">
+            </div>
+            <h3 class="card-title">Зарядка завершена</h3>
+          </div>
+          <div class="card-specs">
+            <p class="card-source">Оконный сенсор</p>
+            <p class="card-time card-time_block">16:22, Сегодня</p>
+          </div>
+          <p class="card-description card-description_big description_critical">Ура! Устройство «Оконный сенсор» снова в
+            строю!</p>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="content-block multimedia"></div>
+  </div>
+  <footer>
+    <menu class="footer-menu">
+      <a class="footer-menu__link">Помощь</a>
+      <a class="footer-menu__link">Обратная связь</a>
+      <a class="footer-menu__link">Разработчикам</a>
+      <a class="footer-menu__link">Условия использования</a>
+      <a class="footer-menu__link" href="./assets/license.pdf" target="blank">Лицензия</a>
+    </menu>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+
+</html>
